force-app/main/default/objects/Contact_Us__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Us Requests</relationshipLabel>
    <relationshipName>Contact_Us_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>