force-app/main/default/objects/Contact_Us__c/fields/Low_Medium_High_Urgent__c.field-meta.xml
<CustomField>
    <fullName>Low_Medium_High_Urgent__c</fullName>
    <label>Low Medium High Urgent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>